# singularity

./: .codeclimate.yml  .gitignore  .golangci.yml  .linty.conf  .mailmap  .markdownlint.yml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  COPYING.md  COPYRIGHT.md  Gopkg.toml  INSTALL  INSTALL.md  LICENSE  LICENSE-APACHE-2.0  LICENSE-LBNL.md  LICENSE.md  Makefile  Makefile.am  NOTICE-APACHE-2.0  README  README.md  RELEASE_PROCEDURE.md  SUPPORT.md  TODO  TODO.md  VERSION  about.html  autogen.sh  azure-pipelines.yml  build_demo.sh  (+31 more)
etc/: Makefile.am  configure_transform.py  default-mtab  default-nsswitch.conf  environment  init  nvliblist.conf  remote.yaml  rocmliblist.conf  singularity.conf  singularity.conf.in
etc/actions/: exec  run  shell  start  test
etc/bash_completion.d/: bash_completion.go  singularity  singularity.in
etc/cgroups/: default.toml
etc/conf/: gen.go  gen_test.go  singularity.conf
etc/defaults/: environment  exec  run  shell
etc/network/: 00_bridge.conflist  10_ptp.conflist  20_ipvlan.conflist  30_macvlan.conflist  40_fakeroot.conflist
etc/seccomp-profiles/: default.json
libexec/: Makefile.am  bootstrap.sh  build.exec  build.help  build.sh  build.summary  cache.summary  capabilities  check.exec  check.help  check.summary  copy.sh  delete.exec  delete.help  delete.summary  docker-import.sh  functions  help.exec  help.help  image-handler.sh  image-prep.sh  import.sh  install.exec  install.help  install.summary  list.exec  run.exec  run.help  run.summary  sapp_archive  sapp_build  sapp_build_archive  sapp_build_base  sapp_build_deps_libs  sapp_buildmeta  sapp_deps  sapp_deps_ldd  sapp_explode  sapp_files  sapp_info  (+20 more)
libexec/bootstrap/: Makefile.am  driver-v1.sh  driver-v2.sh  main.sh
libexec/bootstrap-scripts/: Makefile.am  checks.sh  deffile-driver-arch.sh  deffile-driver-busybox.sh  deffile-driver-debootstrap.sh  deffile-driver-docker.sh  deffile-driver-localimage.sh  deffile-driver-self.sh  deffile-driver-shub.sh  deffile-driver-yum.sh  deffile-driver-zypper.sh  deffile-post.sh  deffile-scriptlets.sh  deffile-sections.sh  driver-arch.sh  driver-busybox.sh  driver-debootstrap.sh  driver-docker.sh  driver-yum.sh  env.sh  environment.sh  functions  main-deffile-stage1.sh  main-deffile-stage2.sh  main-deffile.sh  main-dockerhub.sh  main-null.sh  post.sh  pre.sh  secbuild.sh
libexec/cache/: Makefile.am  exec  help  usage
libexec/cli/: Makefile.am  action_argparser.sh  apprun.exec  apprun.help  apps.exec  apps.help  apps.info  bootstrap.exec  bootstrap.help  bootstrap.info  bootstrap.summary  build.exec  build.exec.in  build.help  build.info  build.summary  capability.add.exec  capability.add.info  capability.drop.exec  capability.drop.info  capability.exec  capability.info  capability.list.exec  capability.list.info  check.exec  check.help  check.info  check.summary  copy.exec  copy.help  copy.summary  create.exec  create.help  create.info  create.summary  delete-old.exec  delete-old.help  delete-old.summary  delete.exec  delete.help  (+103 more)
libexec/defaults/: Makefile.am  environment  exec  run  shell
libexec/handlers/: Makefile.am  archive-cpio.sh  archive-tar.sh  image-docker.sh  image-http.sh  image-instance.sh  image-shub.sh
libexec/help/: Makefile.am  exec  help  usage
libexec/helpers/: Makefile.am  README.md  bootstrap.py  bootstrap.sh  check.sh  copy.sh  help.sh  image-create.sh  image-expand.sh  image-export.sh  image-import.sh  image-mount.sh  image.sh  inspect.sh  record-env.sh
libexec/install_deps/: Makefile.am  ldd
libexec/mods/: Makefile.am  archive_meta  build.sh  build.smod  build_prep  build_sanity  build_scriptlets  build_test  cache.smod  explode  filecheck  install.sh  install.smod  install_confs  install_deps  install_env  install_file  install_files  install_pkgs  install_runscripts  install_scriptlets  interpreter.dep  ldd.dep  linux_build.smod  linux_build_arch.smod  linux_build_busybox.smod  linux_build_debian.smod  linux_build_redhat.smod  ompi.dep  perlmods.dep  post_install_check  pymods.dep  r.dep  sappdir_archive  sappdir_archive_meta  sappdir_check  sappdir_delete  sappdir_exists  sappdir_explode  sappdir_filecheck  (+7 more)
libexec/python/: Makefile.am  README.md  __init__.py  add.py  base.py  bootstrap.py  cli.py  defaults.py  docker.py  import.py  logman.py  message.py  pull.py  shell.py  size.py  sutils.py  templates.py  utils.py
libexec/run/: 10-explode  20-hostfiles  50-check  90-sexec  Makefile.am  exec  usage
src/: Makefile  Makefile.am  action.c  add.c  bindloop.c  bootstrap.c  builddef.c  clean_dir.c  clean_dir.h  cleanupd.c  config_parser.c  config_parser.h  configure_transform.py  constants.h  container-shell.c  container_actions.c  container_actions.h  container_files.c  container_files.h  copy.c  create.c  docker-extract  docker-extract.c  expand.c  export.c  file.c  file.h  fork.c  fork.h  ftrace.c  ftype.c  get-config.c  get-configvals.c  get-keyvals.c  get-section.c  image-bind.c  image-bootstrap.c  image-create.c  image-expand.c  image-mount.c  (+48 more)
src/action/: Makefile.am  action.c
src/action-lib/: Makefile.am  action-lib.h  action.h  appexec.c  apprun.c  appshell.c  apptest.c  exec.c  include.h  ready.c  run.c  shell.c  test.c  trace.c
src/bootstrap-lib/: Makefile.am  bootdef_parser.c  driver.c  include.h  init.c  keyval.c  new_bootstrap.c
src/core/: action.c  builddef.c  cleanupd.c  copy.c  docker-extract.c  expand.c  get-configvals.c  get-keyvals.c  get-section.c  mount.c  sif.c  sif.mconf  simage.c  start.c
src/docs/: content-runs.go  content-runsy.go  content.go  docs_gen.go  templates.go
src/file/: Makefile.am  bind-file.c  file-bind.c  file.c  file.h
src/image/: Makefile.am  image-mount.c  image-mount.h  image-util.c  image-util.h  loop-control.c
src/import-lib/: include.h  init.c
src/include/: config_parser.h  namespaces.h  sessiondir.h
src/lib/: Makefile.am  bootstrap_parser.c  bootstrap_parser.h  config_defaults.h  config_parser.c  config_parser.h  file.c  fork.c  image-util.c  (+14 more)
(+2435 files in other folders)
